RESOLVED FIXED132394
Preemptive header fixes for when WebKit.framework is going to provide the modern API
https://bugs.webkit.org/show_bug.cgi?id=132394
Summary Preemptive header fixes for when WebKit.framework is going to provide the mod...
Anders Carlsson
Reported 2014-04-30 12:07:45 PDT
Preemptive header fixes for when WebKit.framework is going to provide the modern API
Attachments
Patch (6.82 KB, patch)
2014-04-30 12:10 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2014-04-30 12:10:42 PDT
Anders Carlsson
Comment 2 2014-04-30 12:48:09 PDT
Note You need to log in before you can comment on or make changes to this bug.