Preemptive header fixes for when WebKit.framework is going to provide the modern API https://bugs.webkit.org/show_bug.cgi?id=132394

Reviewed by Dan Bernstein.

* UIProcess/API/Cocoa/WKBrowsingContextPolicyDelegate.h:
(NS_ENUM):
Delete WKNavigationType for now. Ultimately the entire delegate should be removed.

* UIProcess/API/Cocoa/WKPreferences.h:
Add a header guard so we can avoid importing WKPreferences.h more than once.

* WebKit2.xcodeproj/project.pbxproj:
_WKScriptWorld.h should be private, not public.
WKScriptMessagePrivate.h and WKUserContentControllerPrivate.h should be private, not project.

Canonical link: https://commits.webkit.org/150404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168037 268f45cc-cd09-0410-ab3c-d52691b4dbfc